other/block-pod-exec-by-pod-label/.chainsaw-test/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
  namespace: bpe-podlabel-ns
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    command: ["sleep", "300"]
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    foo: bar
  name: pod02
  namespace: bpe-podlabel-ns
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    command: ["sleep", "300"]
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    foo: bar
    exec: "false"
  name: pod03
  namespace: bpe-podlabel-ns
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    command: ["sleep", "300"]
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    exec: "true"
    foo: bar
  name: pod04
  namespace: bpe-podlabel-ns
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    command: ["sleep", "300"]
